fix: fix mobile alignment

--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -31,6 +31,8 @@
 @media screen and (max-width: 768px) {
   .about-content {
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   .about-paragraph {
     padding: 0;
